scripts/infra/common/tenant-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
