scripts/infra/common/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-nodeport
  namespace: manager # Change this value to match the namespace metadata.name
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    name: minio
  type: NodePort
